# rust-jemalloc-pprof

./: Cargo.toml  LICENSE  Makefile  README.md  buf.gen.yaml  shell.nix
.github/: dependabot.yml
.github/workflows/: tests.yaml
capi/: Cargo.toml
capi/include/: jemalloc_pprof.h
capi/man/: dump_jemalloc_pprof.3
capi/src/: lib.rs
example/: Cargo.toml
example/src/: main.rs
mappings/: Cargo.toml
mappings/src/: lib.rs
pure/: Cargo.toml
pure/src/: cast.rs  lib.rs  linux.rs
src/: cast.rs  internal.rs  jemalloc.rs  lib.rs  linux.rs  perftools.profiles.rs
util/: Cargo.toml
util/src/: lib.rs
