[package]
name = "jemalloc_pprof"
description = "Convert jemalloc heap profiles to pprof to understand memory usage, fix memory leaks, and fix OOM Kills."
version = "0.0.1"
edition = "2021"
publish = true
license = "Apache-2.0"
authors = [
    "Frederic Branczyk <frederic.branczyk@polarsignals.com>",
    "Brennan Vincent <brennan@materialize.com>",
]
repository = "https://github.com/polarsignals/rust-jemalloc-pprof"
keywords = ["jemalloc", "pprof", "memory", "profiling", "heap", "leak", "observability", "monitoring", "oom", "oom-killer"]
categories = ["development-tools", "development-tools::profiling", "development-tools::debugging", "memory-management"]

[dependencies]
anyhow = "1.0.66"
flate2 = "1.0.24"
libc = "0.2.138"
once_cell = "1.16.0"
prost = { version = "0.11.3", features = ["no-recursion-limit"] }
tempfile = "3.2.0"
tikv-jemalloc-ctl = { version = "0.5.0", features = ["use_std"] }
tracing = "0.1.37"
tokio = { version = "1.32.0", features = ["time", "sync"] }
paste = "1.0.11"
num = "0.4.0"
