[workspace]
members = ["pure", "capi"]

[package]
name = "jemalloc_pprof"
description = "Convert jemalloc heap profiles to pprof to understand memory usage, fix memory leaks, and fix OOM Kills."
version = "0.1.0"
edition = "2021"
publish = true
license = "Apache-2.0"
authors = [
    "Frederic Branczyk <frederic.branczyk@polarsignals.com>",
    "Brennan Vincent <brennan.vincent@polarsignals.com>",
]
repository = "https://github.com/polarsignals/rust-jemalloc-pprof"
keywords = ["jemalloc", "pprof", "memory", "profiling", "observability"]
categories = ["development-tools", "development-tools::profiling", "development-tools::debugging", "memory-management"]
documentation = "https://docs.rs/jemalloc_pprof/latest/jemalloc_pprof/"
homepage = "https://crates.io/crates/jemalloc_pprof"

[workspace.dependencies]
anyhow = "1.0.66"
flate2 = "1.0.24"
libc = "0.2.138"
once_cell = "1.16.0"
prost = { version = "0.11.3", features = ["no-recursion-limit"] }
tempfile = "3.2.0"
tikv-jemalloc-ctl = { version = "0.5.0", features = ["use_std"] }
tracing = "0.1.37"
tokio = { version = "1.32.0", features = ["time", "sync"] }
paste = "1.0.11"
num = "0.4.0"
errno = "0.3.8"

[dependencies]
pure = { path = "./pure" }
libc.workspace = true
anyhow.workspace = true
tikv-jemalloc-ctl.workspace = true
once_cell.workspace = true
tracing.workspace = true
tempfile.workspace = true
tokio.workspace = true
