[workspace]
members = ["mappings", "capi", "util", "example"]

[package]
name = "jemalloc_pprof"
description = "Convert jemalloc heap profiles to pprof to understand memory usage, fix memory leaks, and fix OOM Kills."
version = "0.8.2"
edition = "2021"
publish = true
license = "Apache-2.0"
authors = [
  "Frederic Branczyk <frederic.branczyk@polarsignals.com>",
  "Brennan Vincent <brennan.vincent@polarsignals.com>",
]
repository = "https://github.com/polarsignals/rust-jemalloc-pprof"
keywords = ["jemalloc", "pprof", "memory", "profiling", "observability"]
categories = [
  "development-tools",
  "development-tools::profiling",
  "development-tools::debugging",
  "memory-management",
]
documentation = "https://docs.rs/jemalloc_pprof/latest/jemalloc_pprof/"
homepage = "https://crates.io/crates/jemalloc_pprof"

[package.metadata.docs.rs]
all-features = true

[workspace.dependencies]
anyhow = "1"
flate2 = "1.0"
libc = "0.2"
once_cell = "1.19"
prost = { version = "0.14", features = ["no-recursion-limit"] }
tempfile = "3.11"
tikv-jemalloc-ctl = { version = "0.6", features = ["use_std"] }
tracing = "0.1"
tokio = { version = "1", features = ["time", "sync"] }
paste = "1.0"
num = "0.4"
errno = "0.3"
util = { path = "./util", version = "0.8", package = "pprof_util" }
mappings = { path = "./mappings", version = "0.7" }
backtrace = "0.3"
inferno = "0.12"

[dependencies]
util.workspace = true
mappings.workspace = true
libc.workspace = true
anyhow.workspace = true
tikv-jemalloc-ctl.workspace = true
once_cell.workspace = true
tracing.workspace = true
tempfile.workspace = true
tokio.workspace = true

[features]
flamegraph = ["util/flamegraph"]
symbolize = ["util/symbolize"]

[dev-dependencies]
tikv-jemallocator = "0.6"
axum = "0.8"
# re-import tokio to enable all its features. This is required to
# successfully compile the test snipptes that are part of the documentation
tokio = { version = "1", features = ["full"] }
