[package]
name = "capi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "jemalloc_pprof"

[dependencies]
libc.workspace = true
anyhow.workspace = true
tempfile.workspace = true
pure = { path = "../pure", version = "0.2.0", package = "rust_jemalloc_pprof_internal" }
errno.workspace = true