[package]
name = "pure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
libc.workspace = true
once_cell.workspace = true
tracing.workspace = true
num.workspace = true
paste.workspace = true
prost.workspace = true
flate2.workspace = true