[package]
name = "rust_jemalloc_pprof_internal"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
libc.workspace = true
once_cell.workspace = true
tracing.workspace = true
num.workspace = true
paste.workspace = true
prost.workspace = true
flate2.workspace = true
