[package]
name = "pprof_util"
version = "0.4.0"
edition = "2021"
description = "various utilities for representing and manipulating profiling data"
publish = true
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2.workspace = true
prost.workspace = true
anyhow.workspace = true
num.workspace = true
paste.workspace = true